# blast-scope

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  NOTICE  PRIVACY.md  PUBLISHING.md  README.md  glama.json  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
bench/: README.md  saber_after_resolution.json  saber_baseline.json  saber_dev_baseline.json  saber_eval.py  saber_holdout_baseline.json
docs/: heuristics.md  hook.md
hooks/: hooks.json
src/blast_scope/: __init__.py  centrality.py  command_effects.py  command_parser.py  config_refs.py  consequences.py  eval.py  graph_resolver.py  hook.py  import_resolver.py  infra.py  recoverability.py  resolution.py  risk_scorer.py  server.py  snapshot.py  speculate.py  vcs.py
src/blast_scope/classes/: __init__.py  docker.py  find.py  git.py  packages.py  rsync.py  sql.py
tests/: test_centrality.py  test_chain.py  test_classes.py  test_classes_docker_pkg_sql.py  test_command_effects.py  test_command_parser.py  test_consequences.py  test_e2e.py  test_eval.py  test_find_oracle.py  test_graph_resolver.py  test_hook.py  test_incremental.py  test_recoverability.py  test_resolution.py  test_risk_scorer.py  test_rsync_oracle.py  test_security_regressions.py  test_server_cache.py  test_snapshot.py  test_speculate.py
tests/fixtures/: additive_commands.txt  destructive_commands.txt  eval_corpus.jsonl  read_commands.txt
tests/fixtures/sample_project/: config.py  db.py  main.py
