[project]
name = "blast-scope"
version = "0.1.0"
description = "MCP tool that scores the blast radius of shell commands using dependency graph analysis"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0,<2",
    "tree-sitter>=0.23.0,<1",
    "tree-sitter-language-pack>=0.3.0,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
blast-scope = "blast_scope.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blast_scope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
